--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 node_modules
 .env
 index-old.js
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
